--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=Projet_PFE
 # ============================
 
 # Lien vers la base de donnes MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/stage_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/stage_db
 
 # Identifiants de connexion
 spring.datasource.username=root
@@ -41,3 +41,9 @@ server.port=8080
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
+# JWT Configuration
+app.jwt-secret=YourBase64EncodedSecretKeyThatShouldBeAtLeast256BitsLong
+app.jwt-expiration-milliseconds=86400000
